[package]
name = "leptos-use"
version = "0.11.0"
edition = "2021"
authors = ["Marc-Stefan Cassola"]
categories = ["gui", "web-programming"]
description = "Collection of essential Leptos utilities inspired by SolidJS USE / VueUse"
exclude = ["examples/", "tests/"]
keywords = ["leptos", "utilities"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Synphonyte/leptos-use"
homepage = "https://leptos-use.rs"

[dependencies]
actix-web = { version = "4", optional = true, default-features = false }
async-trait = "0.1"
cfg-if = "1"
codee = "0.1"
cookie = { version = "0.18", features = ["percent-encode"] }
default-struct-builder = "0.5"
futures-util = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-utils = { version = "0.2" }
http1 = { version = "1", optional = true, package = "http" }
http0_2 = { version = "0.2", optional = true, package = "http" }
js-sys = "0.3"
lazy_static = "1"
leptos = { git = "https://github.com/leptos-rs/leptos" }
leptos_axum = { optional = true, git = "https://github.com/leptos-rs/leptos" }
leptos_actix = { optional = true, git = "https://github.com/leptos-rs/leptos" }
leptos-spin = { version = "0.2", optional = true }
num = { version = "0.4", optional = true }
paste = "1"
send_wrapper = "0.6.0"
thiserror = "1"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "AddEventListenerOptions",
    "BinaryType",
    "BroadcastChannel",
    "Coordinates",
    "Clipboard",
    "CloseEvent",
    "CssStyleDeclaration",
    "CustomEvent",
    "CustomEventInit",
    "DisplayMediaStreamConstraints",
    "DomRect",
    "DomRectReadOnly",
    "DataTransfer",
    "DragEvent",
    "Element",
    "EventListener",
    "EventListenerOptions",
    "EventSource",
    "EventSourceInit",
    "EventTarget",
    "File",
    "FileList",
    "Geolocation",
    "HtmlDocument",
    "HtmlElement",
    "HtmlLinkElement",
    "HtmlStyleElement",
    "IntersectionObserver",
    "IntersectionObserverInit",
    "IntersectionObserverEntry",
    "Location",
    "MediaDevices",
    "MediaQueryList",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaStreamTrack",
    "MessageEvent",
    "MouseEvent",
    "MutationObserver",
    "MutationObserverInit",
    "MutationRecord",
    "Navigator",
    "NodeList",
    "Notification",
    "NotificationDirection",
    "NotificationOptions",
    "NotificationPermission",
    "Permissions",
    "PermissionState",
    "PermissionStatus",
    "PointerEvent",
    "Position",
    "PositionError",
    "PositionOptions",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "ReadableStreamGetReaderOptions",
    "ReadableStreamReaderMode",
    "ResizeObserver",
    "ResizeObserverBoxOptions",
    "ResizeObserverEntry",
    "ResizeObserverOptions",
    "ResizeObserverSize",
    "ScrollBehavior",
    "ScrollToOptions",
    "ServiceWorker",
    "ServiceWorkerContainer",
    "ServiceWorkerRegistration",
    "ServiceWorkerState",
    "Storage",
    "StorageEvent",
    "Touch",
    "TouchEvent",
    "TouchList",
    "Url",
    "UrlSearchParams",
    "VisibilityState",
    "WebSocket",
    "WebTransport",
    "WebTransportOptions",
    "WebTransportDatagramDuplexStream",
    "WebTransportBidirectionalStream",
    "Window",
    "WebTransportReceiveStream",
    "WebTransportSendStream",
    "WritableStream",
    "WritableStreamDefaultWriter",
]

[dev-dependencies]
getrandom = { version = "0.2", features = ["js"] }
leptos_meta = { git = "https://github.com/leptos-rs/leptos" }
rand = "0.8"
codee = { version = "0.1", features = ["json_serde", "msgpack_serde", "base64", "prost"] }
serde = { version = "1", features = ["derive"] }

[features]
actix = ["dep:actix-web", "dep:leptos_actix", "dep:http0_2"]
axum = ["dep:leptos_axum", "dep:http1"]
docs = []
math = ["num"]
spin = ["dep:leptos-spin", "dep:http1"]
ssr = []
wasm_ssr = []

[package.metadata.docs.rs]
features = ["math", "docs", "ssr"]
rustdoc-args = ["--cfg=web_sys_unstable_apis"]
rustc-args = ["--cfg=web_sys_unstable_apis"]
