[workspace]
resolver = "2"

members = [
    "is_err",
    "is_none",
    "is_ok",
    "is_some",
    "on_click_outside",
    "use_abs",
    "use_active_element",
    "use_breakpoints",
    "use_ceil",
    "use_color_mode",
    "use_css_var",
    "use_cycle_list",
    "use_debounce_fn",
    "use_document_visibility",
    "use_drop_zone",
    "use_element_hover",
    "use_element_size",
    "use_element_visibility",
    "use_event_listener",
    "use_favicon",
    "use_floor",
    "use_intersection_observer",
    "use_interval",
    "use_interval_fn",
    "use_intl_number_format",
    "use_media_query",
    "use_mouse",
    "use_mutation_observer",
    "use_raf_fn",
    "use_resize_observer",
    "use_round",
    "use_scroll",
    "use_storage",
    "use_throttle_fn",
    "use_websocket",
    "use_window_focus",
    "use_window_scroll",
    "watch_debounced",
    "watch_pausable",
    "watch_throttled",
]

exclude = [
    "ssr"
]

[package]
name = "leptos-use-examples"
version = "0.3.3"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[lib]

[package.metadata.leptos]
lib-profile-release = "wasm-release"
