[package]
name = "on_click_outside"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { workspace = true, features = ["nightly", "csr"] }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
log = { workspace = true }
leptos-use = { workspace = true, features = ["on_click_outside", "docs"] }
web-sys = { workspace = true }

[dev-dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-test = { workspace = true }
