[package]
name = "use_active_element"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.4", features = ["nightly", "csr"] }
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
leptos-use = { path = "../..", features = ["docs"] }
web-sys = { version = "0.3", features = ["HtmlElement", "DomStringMap"] }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
