[package]
name = "use_cookie"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { workspace = true, features = [
    "nightly",
    "csr",
] }
codee.workspace = true
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
leptos-use = { path = "../..", default-features = false, features = ["use_cookie", "docs"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
web-sys = "0.3"

[dev-dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-test = { workspace = true }
