[package]
name = "use_interval_fn"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { workspace = true, features = [
    "nightly",
    "csr",
] }
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
leptos-use = { path = "../..", default-features = false, features = ["use_interval_fn", "docs", "math"] }
web-sys = "0.3"

[dev-dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-test = { workspace = true }
